// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormActions should match with the snapshot 1`] = `
<div
  className="c-form-actions"
>
  <Button
    className=""
    container="default"
    disabled={false}
    fullWidth={false}
    hasSVG={false}
    loading={false}
    noShadow={false}
    onClick={null}
    shape="rounded"
    size={2}
    submit={true}
    type="primary"
  >
    Submit
  </Button>
  <Button
    className=""
    container="default"
    disabled={false}
    fullWidth={false}
    hasSVG={false}
    loading={false}
    noShadow={false}
    onClick={[Function]}
    shape="rounded"
    size={2}
    submit={false}
    type="default"
  >
    Cancel
  </Button>
</div>
`;

exports[`FormActions should match with the snapshot 2`] = `
<div
  className="c-form-actions c-form-actions--align-between"
>
  <Button
    className=""
    container="default"
    disabled={false}
    fullWidth={false}
    hasSVG={false}
    loading={false}
    noShadow={false}
    onClick={null}
    shape="rounded"
    size={2}
    submit={true}
    type="primary"
  >
    Submit
  </Button>
  <Button
    className=""
    container="default"
    disabled={false}
    fullWidth={false}
    hasSVG={false}
    loading={false}
    noShadow={false}
    onClick={[Function]}
    shape="rounded"
    size={2}
    submit={false}
    type="default"
  >
    Cancel
  </Button>
</div>
`;

exports[`FormActions should match with the snapshot 3`] = `
<div
  className="c-form-actions c-form-actions--align-end"
>
  <Button
    className=""
    container="default"
    disabled={false}
    fullWidth={false}
    hasSVG={false}
    loading={false}
    noShadow={false}
    onClick={null}
    shape="rounded"
    size={2}
    submit={true}
    type="primary"
  >
    Submit
  </Button>
  <Button
    className=""
    container="default"
    disabled={false}
    fullWidth={false}
    hasSVG={false}
    loading={false}
    noShadow={false}
    onClick={[Function]}
    shape="rounded"
    size={2}
    submit={false}
    type="default"
  >
    Cancel
  </Button>
</div>
`;
